--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mdbreact": "^4.27.0",
     "moment": "^2.25.3",
     "moment-range": "^4.0.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.0.0",
     "react-browser-notifications": "^1.0.14",
     "react-color": "^2.18.1",
@@ -30,6 +32,8 @@
     "react-range-picker": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scroll-parallax": "^2.3.5",
+    "react-scroll-up-button": "^1.6.4",
     "react-select": "^3.1.0",
     "react-toastify": "^5.5.0",
     "react-web-notification": "^0.8.0",
