--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
@@ -16,6 +17,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-input-files": "^1.2.0",
+    "react-media": "^1.10.0",
     "react-particles-js": "^2.7.1",
     "react-range-picker": "^1.0.1",
     "react-router-dom": "^5.1.2",
